crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_circular_reference.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for circular_reference
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: first ─
import types
first = types.ModuleType('first')
exec('', first.__dict__)

# ─ Module: second ─

# ─ Entry Module: hello ─
print("Hello")
