crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_explicit_relative_import_from_parent_package.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for explicit_relative_import_from_parent_package
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings ─
import types
greetings = types.ModuleType('greetings')
exec('', globals(), greetings.__dict__)

# ─ Module: greetings.messages ─
message = "Hello"

# ─ Module: greetings.greeting ─
import types
greetings.greeting = types.ModuleType('greetings.greeting')
exec('message = message\n__all__ = ["message"]', globals(), greetings.greeting.__dict__)

# ─ Entry Module: hello ─
print(greetings.greeting.message)
