crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_explicit_relative_import_single_dot_in_init.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for explicit_relative_import_single_dot_in_init
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec('message = "Hello"', greetings.greeting.__dict__)

# ─ Module: greetings ─
exec('__all__ = ["message"]\nmessage = greetings.greeting.message', globals(), greetings.__dict__)

# ─ Entry Module: hello ─
print(greetings.message)
