crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_implicit_init_import.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for implicit_init_import
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings ─
import types
greetings = types.ModuleType('greetings')
exec('message = "Hello"', globals(), greetings.__dict__)

# ─ Module: greetings.irrelevant ─
import types
greetings.irrelevant = types.ModuleType('greetings.irrelevant')
exec('', greetings.irrelevant.__dict__)

# ─ Entry Module: hello ─
print(greetings.message)
