crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_import_from_as_module.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for import_from_as_module
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec('message = "Hello"', greetings.greeting.__dict__)

# ─ Module: greetings ─
exec('', globals(), greetings.__dict__)

# ─ Entry Module: hello ─
g = greetings.greeting
print(g.message)
