crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_import_from_as_value.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for import_from_as_value
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
message = "Hello"

# ─ Entry Module: hello ─
m = message
print(m)
