crates/cribo/tests/snapshots/stickytape_compatibility_tests__bundled_imports_in_imported_modules.snap
---
source: crates/cribo/tests/stickytape_compatibility_tests.rs
description: Bundled content for imports_in_imported_modules
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.english ─
message = "Hello"

# ─ Module: greetings ─
import types
greetings = types.ModuleType('greetings')
exec('message = message', globals(), greetings.__dict__)

# ─ Entry Module: hello ─
message = greetings.message
print(message)
